<resources>
    <string name="app_name">Nyx</string>
    <string name="titulo_produto">Detalhe Produto</string>
    <string name="HintNomeProduto">Nome</string>
    <string name="HintNomeProdutoAdapter">Nome</string>
    <string name="descricaoProduto">Descrição Produto</string>
    <string name="valorProduto">Valor</string>
    <string name="qtdEstoqueProduto">Estoque: 00</string>
    <string name="btnComprar">Vender</string>
    <string name="janelaLogin">Login</string>
    <string name="HintEstoque">Estoque</string>
    <string name="ler_codigo_de_barras">Ler codigo de barras</string>
    <string name="pesquisar">Pesquisar</string>
    <!-- Barcode -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="sim">sim</string>
    <string name="nao">nao</string>
    <string name="action_settings">action_settings</string>
    <string name="foto_do_usu_rio">Foto do usuário</string>
    <string name="foto_do_usuario">foto_do_usuario</string>
    <string name="vendedor">Vendedor</string>
    <string name="emaill">Email</string>
    <string name="email">email</string>
    <string name="text_estoque">Estoque:</string>
    <string name="navigation_drawer_open">Open navegation drawer</string>
    <string name="navigation_drawer_close">Close navegation drawer</string>
    <string name="foto_produto">foto_produto</string>
    <string name="codigo_de_barras">label_codigo_de_barras</string>
    <string name="hint_codigo_barras">hint_codigo_de_barras</string>
    <string name="label_nome">label_nome</string>
    <string name="nome_produto">hint_nome_produto</string>
    <string name="label_descricao">label_descricao</string>
    <string name="hint_descricao">hint_descricao_produto</string>
    <string name="label_valor">label_valor</string>
    <string name="hint_valor">hint_valor</string>
    <string name="label_quant">label_quantidade</string>
    <string name="hint_quantidade">hint_quantidade_digite</string>
    <string name="btn_inserir">bt_inserir</string>
    <string name="toast_otimo_produto_cadastrado">toast_otimo_produto_cadastrado</string>
    <string name="toast_produto_nao_cadastrado">toast_produto_nao_cadastrado</string>
    <string name="toast_todos_campos_devem_preenchidos">toast_todos_campos_devem_preenchidos</string>
    <string name="title_menu_lercodigodebarras">Ler Código de Barras</string>
    <string name="texto_sobre">Texto Sobre</string>
    <string name="hint_valor_produto">R$: 00,00</string>
    <string name="hintnomeproduto">Nome Produto</string>
    <string name="hint_sobrenome">sobrenome</string>
    <string name="hint_cpf">CPF no formato 123.456.789-00</string>
    <string name="hint_nome">Nome</string>
    <string name="bt_cadastrar">Cadastrar</string>


</resources>
