<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvDescricao"
        android:layout_width="321dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:hint="@string/descricaoProduto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQtdEstoque" />

    <TextView
        android:id="@+id/tvValorProduto"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:hint="@string/hint_valor_produto"
        android:inputType="textPersonName"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvQtdEstoque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvQtdEstoque" />

    <TextView
        android:id="@+id/tvQtdEstoque"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:hint="@string/qtdEstoqueProduto"
        android:inputType="textPersonName"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toEndOf="@+id/tvValorProduto"
        app:layout_constraintTop_toBottomOf="@+id/imvFotoProduto" />

    <ImageView
        android:id="@+id/imvFotoProduto"
        android:layout_width="133dp"
        android:layout_height="131dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeProduto"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvNomeProduto"
        android:layout_width="197dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintnomeproduto"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnVenderProduto"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:background="@color/colorAccent"
        android:text="@string/btnComprar"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etQuantidade"
        tools:text="Vender" />

    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="171dp"
        android:layout_height="51dp"

        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/BtnVenderProduto"
        app:layout_constraintTop_toBottomOf="@+id/tvDescricao" />

</android.support.constraint.ConstraintLayout>